--- a/app/scripts/views/hakemus/avustuskohteet.html
+++ b/app/scripts/views/hakemus/avustuskohteet.html
@@ -50,7 +50,7 @@
     </div>
     <div class="col-md-3">
       <div class="pull-right">
-        <h4>{{sumHaettavaAvustus() | currency:"&euro;"}} (sis. alv)</h4>
+        <h4>{{sumHaettavaAvustus() | currency:"&euro;"}}</h4>
       </div>
     </div>
   </div>
