LIVIJUKU-592: IE 11: Täydennyspyynnön selitekenttä ei näy kunnolla

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -38,3 +38,4 @@
 @import '../scripts/components/tunnusluvut/kysynta'
 @import '../scripts/components/tunnusluvut/tarjonta'
 @import '../scripts/components/ely/kehittamishankkeet'
+@import '../scripts/components/taydennysdialogi'
