--- a/app/scripts/components/taydennysdialogi/index.html
+++ b/app/scripts/components/taydennysdialogi/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-          <textarea id="taydennysselite" name="taydennysselite" class="animate msd-elastic: \n;"
+          <textarea id="taydennysselite" name="taydennysselite" rows="2" class="animate msd-elastic: \n;"
                     ng-model="taydennysselite"></textarea>
       </div>
     </div>
