LIVIJUKU-630: Tunnuslukujen syöttäminen: TVV-valintaan muutoksia

--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -5,8 +5,10 @@
   <ng-form id="tunnusluvutValintaForm" name="tunnusluvutValintaForm">
     <juku-form-row>
       <div class="col-md-4">
-        <input type="text" ng-model="selectedOrganisaatio" uib-typeahead="kunta for kunta in kunnat | filter:$viewValue"
-               class="form-control" placeholder="Valitse kunta tai kuntayhtymä">
+        <select id="organisaatio" ng-model="selectedOrganisaatio" ng-disabled="isReadonly()" placeholder="Valitse toimivaltainen viranomainen" class="form-control" required>
+          <option value="" selected disabled>Valitse toimivaltainen viranomainen</option>
+          <option ng-repeat="kunta in kunnat()" value="{{kunta.id}}">{{kunta.nimi}}</option>
+        </select>
       </div>
       <div class="col-md-2">
         <select id="vuosi" name="vuosi"
