--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-ttyt.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen-ttyt.html
@@ -28,7 +28,7 @@
           </thead>
           <tbody>
             <tr>
-              <th>Suunnittelun ja organisaation henkilöstö</th>
+              <td><b>Suunnittelun ja organisaation henkilöstö</b></td>
               <td>
                 <form-group-compact label="Henkilöstö">
                   <input id="taustatiedot-henkilosto" name="henkilosto"
@@ -50,7 +50,7 @@
               </td>
             </tr>
             <tr>
-              <th>Joukkoliikenteen ulkoistetut kustannukset: asiakaspalvelu</th>
+              <td><b>Joukkoliikenteen ulkoistetut kustannukset: asiakaspalvelu</b></td>
               <td>
                 <form-group-compact label="Asiakaspalvelu">
                   <input id="taustatiedot-asiakaspalvelu" name="asiakaspalvelu" type="text"
@@ -72,7 +72,7 @@
               </td>
             </tr>
             <tr>
-              <th>Joukkoliikenteen ulkoistetut kustannukset: konsulttipalvelu</th>
+              <td><b>Joukkoliikenteen ulkoistetut kustannukset: konsulttipalvelu</b></td>
               <td>
                 <form-group-compact label="Konsulttipalvelu">
                   <input id="taustatiedot-konsulttipalvelu" name="konsulttipalvelu" type="text"
@@ -94,7 +94,7 @@
               </td>
             </tr>
             <tr>
-              <th>Joukkoliikenteen ulkoistetut kustannukset: lipunmyyntipalkkiot</th>
+              <td><b>Joukkoliikenteen ulkoistetut kustannukset: lipunmyyntipalkkiot</b></td>
               <td>
                 <form-group-compact label="Lipunmyyntipalkkiot">
                   <input id="taustatiedot-lipunmyyntipalkkiot" name="lipunmyyntipalkkiot" type="text"
@@ -116,7 +116,7 @@
               </td>
             </tr>
             <tr>
-              <th>Joukkoliikenteen ulkoistetut kustannukset: tieto-/maksujärjestelmät</th>
+              <td><b>Joukkoliikenteen ulkoistetut kustannukset: tieto-/maksujärjestelmät</b></td>
               <td>
                 <form-group-compact label="Tietomaksujärjestelmät">
                   <input id="taustatiedot-tietomaksujarjestelmat" name="tietomaksujarjestelmat" type="text"
@@ -138,7 +138,7 @@
               </td>
             </tr>
             <tr>
-              <th>Joukkoliikenteen ulkoistetut kustannukset: muut palvelut</th>
+              <td><b>Joukkoliikenteen ulkoistetut kustannukset: muut palvelut</b></td>
               <td>
                 <form-group-compact label="Muutpalvelut">
                   <input id="taustatiedot-muutpalvelut" name="muutpalvelut" type="text"
@@ -173,7 +173,7 @@
           </thead>
           <tbody>
             <tr>
-              <th>Alueen kuntien lukumäärä</th>
+              <td><b>Alueen kuntien lukumäärä</b></td>
               <td>
                 <form-group-compact label="Kuntien lukumääärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-kuntienlkm" name="kuntienlkm"
@@ -193,7 +193,7 @@
               </td>
             </tr>
             <tr>
-              <th>Joukkoliikenteen lippujärjestelmän vyöhykkeiden määrä</th>
+              <td><b>Joukkoliikenteen lippujärjestelmän vyöhykkeiden määrä</b></td>
               <td>
                 <form-group-compact label="Vyöhykkeiden lukumääärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-vyohykkeidenlkm" name="vyohykkeidenlkm"
@@ -226,7 +226,7 @@
           </thead>
           <tbody>
             <tr>
-              <th>Maapinta-ala, km2</th>
+              <td><b>Maapinta-ala, km2</b></td>
               <td>
                 <form-group-compact label="Maapinta-ala">
                   <input id="taustatiedot-maapinta-ala" name="maapinta-ala"
@@ -248,7 +248,7 @@
               </td>
             </tr>
             <tr>
-              <th>Asukasmäärä</th>
+              <td><b>Asukasmäärä</b></td>
               <td>
                 <form-group-compact label="Asukasmäärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-asukasmaara" name="asukasmaara"
@@ -268,7 +268,7 @@
               </td>
             </tr>
             <tr>
-              <th>Työpaikkamäärä</th>
+              <td><b>Työpaikkamäärä</b></td>
               <td>
                 <form-group-compact label="Työpaikkamäärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-tyopaikkamaara" name="tyopaikkamaara"
@@ -288,7 +288,7 @@
               </td>
             </tr>
             <tr>
-              <th>Pendelöivien osuus alueella (oman kunnan ulkopuolella työssäkäynti)</th>
+              <td><b>Pendelöivien osuus alueella (oman kunnan ulkopuolella työssäkäynti)</b></td>
               <td>
                 <form-group-compact label="Pendelöivien osuus">
                   <input id="taustatiedot-pendeloivienosuus" name="pendeloivienosuus"
@@ -308,7 +308,7 @@
               </td>
             </tr>
             <tr>
-              <th>Henkilöautoliikenteen suorite (jos tiedossa)</th>
+              <td><b>Henkilöautoliikenteen suorite (jos tiedossa)</b></td>
               <td>
                 <form-group-compact label="Henkilöautoliikenne">
                   <input id="taustatiedot-henkiloautoliikenne" name="henkiloautoliikenne" type="text"
@@ -329,7 +329,7 @@
               </td>
             </tr>
             <tr>
-              <th>Autoistumisaste</th>
+              <td><b>Autoistumisaste</b></td>
               <td>
                 <form-group-compact label="Autoistumisaste">
                   <input id="taustatiedot-autoistumisaste" name="autoistumisaste" type="text"
@@ -366,9 +366,9 @@
           </thead>
           <tbody>
             <tr>
-              <th>Pysäkkien lukumäärä voidaan määrittää esimerkiksi digiroad:n avulla. Toimivalta-alueen pysäkkien
+              <td><b>Pysäkkien lukumäärä voidaan määrittää esimerkiksi digiroad:n avulla. Toimivalta-alueen pysäkkien
                 lukumäärä tie- ja katuverkolla
-              </th>
+              </b></td>
               <td>
                 <form-group-compact label="Pysäkkien lukumääärä" errormessage="kokonaislukuErrorMessage">
                   <input id="taustatiedot-pysakkienlkm" name="pysakkienlkm"
@@ -406,8 +406,8 @@
           </thead>
           <tbody>
             <tr>
-              <th>Kertalipun hinta vyöhykkeittäin (aikuinen)(€)
-              </th>
+              <td><b>Kertalipun hinta vyöhykkeittäin (aikuinen)(€)
+              </b></td>
               <td>
                 <form-group-compact label="Kertalippu vyöhyke 1">
                   <input id="taustatiedot-kertalippuvyohyke-1" name="kertalippuvyohyke1" type="text"
@@ -484,8 +484,8 @@
               </td>
             </tr>
             <tr>
-              <th>Kausilipun hinta vyöhykkeittäin (30 päivää, aikuinen)(€)
-              </th>
+              <td><b>Kausilipun hinta vyöhykkeittäin (30 päivää, aikuinen)(€)
+              </b></td>
               <td>
                 <form-group-compact label="Kausilippu vyöhyke 1">
                   <input id="taustatiedot-kausilippuvyohyke-1" name="kausilippuvyohyke1" type="text"
@@ -576,7 +576,7 @@
           </thead>
           <tbody>
             <tr>
-              <th>Liikenteen ostot, € (siirtymäkaudella)</th>
+              <td><b>Liikenteen ostot, € (siirtymäkaudella)</b></td>
               <td>
                 <form-group-compact label="Liikenteen ostot">
                   <input id="taustatiedot-liikenteenostot" name="liikenteenostot" type="text"
@@ -598,7 +598,7 @@
               </td>
             </tr>
             <tr>
-              <th>Hintojen alentaminen, € (siirtymäkaudella, valtion lippusubventio on poistumassa)</th>
+              <td><b>Hintojen alentaminen, € (siirtymäkaudella, valtion lippusubventio on poistumassa)</b></td>
               <td>
                 <form-group-compact label="Hintojen alentaminen">
                   <input id="taustatiedot-hintojenalentaminen" name="hintojenalentaminen" type="text"
@@ -620,7 +620,7 @@
               </td>
             </tr>
             <tr>
-              <th>Valtion avustus sopimuskorvauksiin, €</th>
+              <td><b>Valtion avustus sopimuskorvauksiin, €</b></td>
               <td>
                 <form-group-compact label="Sopimuskorvaukset">
                   <input id="taustatiedot-sopimiskorvaukset" name="sopimiskorvaukset" type="text"
@@ -642,7 +642,7 @@
               </td>
             </tr>
             <tr>
-              <th>Informaatio ja maksujärjestelmien kehittäminen, €</th>
+              <td><b>Informaatio ja maksujärjestelmien kehittäminen, €</b></td>
               <td>
                 <form-group-compact label="Informaatio ja maksujärjestelmien kehittäminen">
                   <input id="taustatiedot-infomaksukeh" name="infomaksukeh" type="text"
@@ -664,7 +664,7 @@
               </td>
             </tr>
             <tr>
-              <th>Matkakeskusten tai matkapalvelukeskusten kehittäminen, €</th>
+              <td><b>Matkakeskusten tai matkapalvelukeskusten kehittäminen, €</b></td>
               <td>
                 <form-group-compact label="Matkakeskusten tai matkapalvelukeskusten kehittäminen">
                   <input id="taustatiedot-matkakeskeh" name="matkakeskeh" type="text"
@@ -686,7 +686,7 @@
               </td>
             </tr>
             <tr>
-              <th>Muu kehittäminen, €</th>
+              <td><b>Muu kehittäminen, €</b></td>
               <td>
                 <form-group-compact label="Muu kehittäminen">
                   <input id="taustatiedot-muukeh" name="muukeh" type="text"
@@ -721,7 +721,7 @@
           </thead>
           <tbody>
             <tr>
-              <th>Tyytyväisten joukkoliikenteen käyttäjien osuus (%, kokonaisluku)</th>
+              <td><b>Tyytyväisten joukkoliikenteen käyttäjien osuus (%, kokonaisluku)</b></td>
               <td>
                 <form-group-compact label="Asiakastyytyväisyys">
                   <input id="taustatiedot-asiakastyytyvaisyys" name="asiakastyytyvaisyys"
